# gameOfLife

./: .gitignore  AnimatedMain.hs  GameOfLife.cabal  Graphics.hs  Grid.hs  LICENSE  Life.hs  Main.hs  README.md  Types.hs  process.txt
Graphics/: Shapes.hs
src/: Bindings.hs  Camera.hs  Display.hs  Grid.hs  Lib.hs  Life.hs
