name:                GameOfLife
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/gatoWololo/GameOfLife#readme
license:             BSD3
license-file:        LICENSE
author:              Chava Rea
maintainer:          gatoWololo@gmail.com
copyright:           None
category:            Simulation.
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Life
                     , Shapes
                     , Types
                     , Bindings
                     , Camera
                     , Display
                     , Grid
  build-depends:       base >= 4.7 && < 5
                     , repa
                     , random
                     , time
                     , GLUT
  default-language:    Haskell2010

executable GameOfLife-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O3 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , GameOfLife
                     , GLUT
                     , time
  default-language:    Haskell2010

test-suite GameOfLife-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , GameOfLife
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/gatoWololo/GameOfLife
